[package]
name = "mixcraft"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
# Logging
env_logger = "0.9"
log = "0.4"

# Graphics
image = "0.24"
wgpu = "0.13"
winit = "0.26"

# Other
bytemuck = { version = "1.9", features = [ "derive" ] }
nalgebra-glm = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
